--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Ballon Catcher</title>
-    <link href="styles/style.css" rel="stylesheet">
+    <title>Balloon Catcher</title>
+
+    <link rel="stylesheet" href="styles/style.css">
+
+  
+    <script>
+      (function () {
+        const allowedDomains = [
+          "bulofkgames.blogspot.com",
+          "thebulofkproject.blogspot.com",
+          "github.io"
+        ];
+
+        const OFFICIAL_SITE = "https://bulofkgames.blogspot.com/";
+        const ref = document.referrer.toLowerCase();
+
+        if (!ref) return;
+
+        const allowed = allowedDomains.some(domain => ref.includes(domain));
+
+        if (!allowed) {
+          window.location.replace(OFFICIAL_SITE);
+        }
+      })();
+    </script>
 </head>
 
 <body>
     <!-- A.Safarji 3710933-YUC -->
     <canvas id="Canvas"></canvas>
 
-    <script src="scripts/positionGameOver.js"></script>
-    <script src="scripts/positionPause.js"></script>
-    <script src="scripts/sounds.js"></script>
+    <!-- Scripts do jogo (ordem correta) -->
     <script src="scripts/objects.js"></script>
-    <script src="scripts/positionInGame.js"></script>
     <script src="scripts/positionTransfer.js"></script>
-    <script src="scripts/positionOpening.js"></script>
     <script src="scripts/main.js"></script>
-
 </body>
-
 </html>
