--- a/index.html
+++ b/index.html
@@ -2,40 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Balloon Catcher</title>
 
+  
     <link rel="stylesheet" href="styles/style.css">
 
-  
+    
     <script>
-      (function () {
-        const allowedDomains = [
-          "bulofkgames.blogspot.com",
-          "thebulofkproject.blogspot.com",
-          "github.io"
-        ];
+        (function () {
+            const allowedDomains = [
+                "bulofkgames.blogspot.com",
+                "thebulofkproject.blogspot.com",
+                "github.io"
+            ];
 
-        const OFFICIAL_SITE = "https://bulofkgames.blogspot.com/";
-        const ref = document.referrer.toLowerCase();
+            const OFFICIAL_SITE = "https://bulofkgames.blogspot.com/";
+            const ref = document.referrer.toLowerCase();
 
-        if (!ref) return;
+            if (!ref) return;
 
-        const allowed = allowedDomains.some(domain => ref.includes(domain));
+            const allowed = allowedDomains.some(domain => ref.includes(domain));
 
-        if (!allowed) {
-          window.location.replace(OFFICIAL_SITE);
-        }
-      })();
+            if (!allowed) {
+                window.location.replace(OFFICIAL_SITE);
+            }
+        })();
     </script>
 </head>
 
 <body>
-    <!-- A.Safarji 3710933-YUC -->
+    <!-- Balloon Catcher | Autor: A. Safarji -->
     <canvas id="Canvas"></canvas>
 
-    <!-- Scripts do jogo (ordem correta) -->
+    
     <script src="scripts/objects.js"></script>
     <script src="scripts/positionTransfer.js"></script>
     <script src="scripts/main.js"></script>
