--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balloon Catcher</title>
 
-  
+    <!-- CSS -->
     <link rel="stylesheet" href="styles/style.css">
 
-    
+    <!-- Proteção contra uso não autorizado -->
     <script>
         (function () {
             const allowedDomains = [
@@ -36,7 +36,7 @@
     <!-- Balloon Catcher | Autor: A. Safarji -->
     <canvas id="Canvas"></canvas>
 
-    
+    <!-- Scripts do jogo (ordem correta) -->
     <script src="scripts/objects.js"></script>
     <script src="scripts/positionTransfer.js"></script>
     <script src="scripts/main.js"></script>
