--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="scripts/positionTransfer.js"></script>
     <script src="scripts/positionOpening.js"></script>
     <script src="scripts/positionInGame.js"></script>
+    <script src="scripts/sounds.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
