--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="scripts/positionOpening.js"></script>
     <script src="scripts/positionInGame.js"></script>
     <script src="scripts/sounds.js"></script>
+    <script src="scripts/positionGameOver.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
